compiler/tools/fpp-check/test/undef/constant_3.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/undef/constant_3.fpp: 2.16
constant b = M.a
               ^
error: undefined symbol a
